Fix single-mix width, add spacing; add hover transition

--- a/src/components/styles/MixesPage.scss
+++ b/src/components/styles/MixesPage.scss
@@ -1,12 +1,14 @@
 .mixes-page {
   @include tablet;
   margin-top: 8.25rem;
-  height: calc(100vh - 10.5rem);
+
+  padding-bottom: 5rem;
+  margin-bottom: 3rem;
 
   background-image: url(https://source.unsplash.com/1920x1080/daily?trance);
   background-position: center center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-attachment: scroll;
   background-size: cover;
 
   // Set all text to white
@@ -22,25 +24,37 @@
 
   .single-mix {
     height: 12rem;
-    background-image: url(https://source.unsplash.com/1280x800/?mix);
+    background-image: url(https://source.unsplash.com/1280x800/daily?studio);
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-size: cover;
-    margin-bottom: 2.5rem;
+    margin: 0 1rem 2rem;
+    padding: 0;
+    transition: ease-in-out 0.5s;
+
+    &:hover {
+      margin: 0 0.25rem 2rem;
+      box-shadow: 10px 8px 5px black;
+    }
 
     .black-overlay {
       background-color: rgba($color: #000000, $alpha: 0.25);
       height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
 
       .mix-info {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
+        padding: 1.25rem;
 
         // Give all text a shadow
         p {
-          text-shadow: 2px 2px 1px black;
+          text-shadow: 3px 3px 2px black;
+
+          &:first-child {
+            margin-bottom: 1rem;
+          }
         }
       }
     }
